--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -85,12 +85,22 @@ span {
 .header-top a i{}
 .header-down{}
 .logo{}
+.logo img {
+	width: 114px;
+}
 .logo a {
 	color: white;
 	font-size: 38px;
 	font-style: italic;
 	text-transform: uppercase;
 	font-weight: 800;
+}
+.headerr-login {
+	float: right;
+}
+.headerr-login a{}
+.headerr-login a:hover {
+	color: #FF9D00;
 }
 .submit{}
 .submit a {
@@ -327,6 +337,14 @@ span {
 	color: red;
 	font-size: 14px;
 }
+.google-login{}
+.google-login a{
+	margin-top: 10px;
+	padding: 10px;
+}
+.google-login a i{
+	margin-right: 5px;
+}
 
 
 
@@ -407,4 +425,94 @@ span {
 }
 .search-user-form .form-control {
 	background-color: #e0e0e1;
+}
+
+
+
+
+/*========================================USER SEARCH==========================================*/
+
+.user-search {
+	margin: 140px 0;
+}
+
+
+
+
+/*========================================USER OWN POST==========================================*/
+
+.users-own-post-table {
+	padding: 60px 35px 40px 20px;
+}
+.users-own-post-table table{}
+.users-own-post-table table thead tr th {
+	text-align: center;
+	font-size: 20px;
+	text-transform: capitalize;
+}
+.users-own-post-table table thead tr th i {
+	margin-right: 5px;
+}
+.users-own-post-table table tbody{}
+.users-own-post-table table tbody tr{}
+.users-own-post-table table tbody tr td{}
+.users-own-post-table table tbody tr td img {
+	width: 100%;
+	margin-right: -300px;
+	border-radius: 20px;
+}
+.user-house-info {
+	padding: 15px;
+}
+.user-house-info h2 {
+	text-transform: capitalize;
+	font-size: 20px;
+}
+.user-house-info p {
+	font-size: 15px;
+	font-family: initial;
+	color: gray;
+}
+.user-house-info h3 {
+	font-size: 22px;
+}
+.ex-date{
+	padding: 75px 0;
+}
+.ex-date p {
+	font-size: 16px;
+}
+.user-post-table-link{}
+.user-post-table-link a {
+	display: block;
+	margin: 20px 0;
+}
+.user-post-table-link a i {
+	margin-right: 5px;
+}
+
+
+
+
+/*========================================USERS BOOKMARK PAGE==========================================*/
+
+.users-bookmark-page {
+	padding: 60px 35px 40px 20px;
+}
+.users-bookmark-page table{}
+.users-bookmark-page table thead tr th {
+	text-align: center;
+	font-size: 20px;
+	text-transform: capitalize;
+}
+.users-bookmark-page table thead tr th i {
+	margin-right: 5px;
+}
+.users-bookmark-page table tbody{}
+.users-bookmark-page table tbody tr{}
+.users-bookmark-page table tbody tr td{}
+.users-bookmark-page table tbody tr td img {
+	width: 100%;
+	margin-right: -390px;
+	border-radius: 20px;
 }
