--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -212,8 +212,9 @@ span {
 	background-color: white;
 	margin: 10px 0;
 }
-.single-result img{
+.single-result img {
 	width: 100%;
+	height: 320px;
 }
 .house-info {
 	padding: 20px;
@@ -471,8 +472,8 @@ span {
 .users-own-post-table table tbody tr{}
 .users-own-post-table table tbody tr td{}
 .users-own-post-table table tbody tr td img {
-	width: 100%;
-	margin-right: -300px;
+	width: 300px;
+	margin-right: -45px;
 	border-radius: 20px;
 }
 .user-house-info {
@@ -486,6 +487,10 @@ span {
 	font-size: 15px;
 	font-family: initial;
 	color: gray;
+}
+.user-house-info p i {
+	font-size: 12px;
+	margin-right: 5px;
 }
 .user-house-info h3 {
 	font-size: 22px;
