home full view recommendation delete and some ther changes done

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -22,6 +22,21 @@
 	.user-pannel-left a {
 		margin: 0 2px;
 	}
+	.intro-title h1 {
+		font-size: 36px;
+	}
+	.home-view-banner img {
+		height: 420px;
+	}
+	.single-similar-home img {
+		height: 120px;
+	}
+	.single-similar-home-info h3 {
+		font-size: 20px;
+	}
+	.single-similar-home-info p {
+		font-size: 22px;
+	}
 	
 }
 
@@ -70,7 +85,62 @@
 	.single-user-content {
 		margin-bottom: 30px;
 	}
-	
+	.intro-title h1 {
+		font-size: 28px;
+	}
+	.intro-title p {
+		font-size: 14px;
+	}
+	.add-cart a {
+		padding: 10px 15px;
+		font-size: 14px;
+	}
+	.amount h2 {
+		font-size: 28px;
+	}
+	.home-view-banner img {
+		height: 350px;
+	}
+	.owner-info h3 {
+		font-size: 16px;
+	}
+	.owner-info a {
+		font-size: 14px;
+	}
+	.similar-home {
+		padding: 10px;
+	}
+	.similar-home h2 {
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
+	.single-similar-home img {
+		height: 80px;
+	}
+	.single-similar-home-info {
+		top: 25%;
+		text-align: center;
+	}
+	.single-similar-home-info h3 {
+		font-size: 16px;
+	}
+	.single-similar-home-info p {
+		font-size: 22px;
+	}
+	.property-description {
+		padding: 15px 20px;
+	}
+	.property-description h2 {
+		font-size: 20px;
+	}
+	.property-description p {
+		font-size: 14px;
+		line-height: 23px;
+	}
+	.property-description ul li {
+		padding-top: 0;
+		font-size: 14px;
+	}
 	
 }
 
@@ -163,6 +233,60 @@
 	.single-user-content {
 		padding: 30px 0 0 0;
 	}
+	.first-intro {
+		padding: 15px 0;
+	}
+	.intro-title h1 {
+		font-size: 26px;
+		text-align: center;
+	}
+	.intro-title p {
+		font-size: 12px;
+		text-align: center;
+	}
+	.rooms-info {
+		margin: 10px 60px;
+	}
+	.rooms-info h2 {
+		font-size: 22px;
+	}
+	.rooms-info p {
+		font-size: 12px;
+	}
+	.amount h2 {
+		padding: 10px 0;
+		text-align: center;
+		font-size: 26px;
+	}
+	.add-cart a {
+		padding: 8px 17px;
+		font-size: 14px;
+	}
+	.number-plate img {
+		width: 62%;
+	}
+	.home-view-banner img {
+		height: 200px;
+	}
+	.owner-info h3 {
+		font-size: 15px;
+		font-weight: 700;
+	}
+	.owner-info a {
+		font-size: 12px;
+	}
+	.property-description h2 {
+		font-size: 18px;
+		padding-bottom: 10px;
+	}
+	.property-description p {
+		font-size: 14px;
+		line-height: 24px;
+	}
+	.property-description ul li {
+		padding-top: 0;
+		font-size: 12px;
+	}
 	
 }
 
@@ -182,21 +306,27 @@
  
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 	.single-banner h1 {
-	font-size: 44px;
-}
-.house-info-right {
-	margin: 28px 0 0 0;
-	float: right;
-}
-.house-info-right h3 {
-	font-size: 32px;
-}
-.user-pannel-left img {
-	margin-left: 180px;
-}
-.user-pannel-left a {
-	margin: 0 220px;
-}	
+		font-size: 44px;
+	}
+	.house-info-right {
+		margin: 28px 0 0 0;
+		float: right;
+	}
+	.house-info-right h3 {
+		font-size: 32px;
+	}
+	.user-pannel-left img {
+		margin-left: 180px;
+	}
+	.user-pannel-left a {
+		margin: 0 220px;
+	}	
+	.owner-info img {
+		padding: 0px 40%;
+	}
+	.home-view-banner img {
+		height: 250px;
+	}
 	
 	
 	
