--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -28,6 +28,10 @@
 	.home-view-banner img {
 		height: 420px;
 	}
+	.carousel-inner > .item > a > img, .carousel-inner > .item > img {
+		line-height: 1;
+		height: 420px;
+	}
 	.single-similar-home img {
 		height: 120px;
 	}
@@ -99,6 +103,9 @@
 		font-size: 28px;
 	}
 	.home-view-banner img {
+		height: 350px;
+	}
+	.carousel-inner > .item > a > img, .carousel-inner > .item > img {
 		height: 350px;
 	}
 	.owner-info h3 {
@@ -268,6 +275,9 @@
 	.home-view-banner img {
 		height: 200px;
 	}
+	.carousel-inner > .item > a > img, .carousel-inner > .item > img {
+		height: 450px;
+	}
 	.owner-info h3 {
 		font-size: 15px;
 		font-weight: 700;
@@ -326,6 +336,9 @@
 	}
 	.home-view-banner img {
 		height: 250px;
+	}
+	.carousel-inner > .item > a > img, .carousel-inner > .item > img {
+		height: 450px;
 	}
 	
 	
