--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -224,6 +224,35 @@ span {
 	text-align: right;
 }
 .sort select {}
+.sorted-nav {
+	margin-left: -20px;
+}
+.sorted-nav ul {
+	border: 1px solid #959292;
+	border-bottom: 0;
+}
+.sorted-nav ul li {
+	list-style: none;
+	font-size: 14px;
+	border-bottom: 1px solid #959292;
+	padding: 2px 10px;
+}
+.sorted-nav ul li a {
+	color: black;
+}
+.sorted-nav ul li a i {
+	
+}
+.sorted-nav ul li a:hover{
+	color: black;
+	text-decoration: none;
+}
+#sorted-nav-collaps {
+	display: none;
+}
+#sorted-nav-collaps li a{
+	display: block;
+}
 
 
 /*RESULT SECTION START*/
